# traffic-light-detector-prototype

./: README.md  camera_detect_traffic_light.py  camera_selecter.py  detect_traffic_light.py  hsv_calculator.py  hsv_slider.py  main.ipynb  pyproject.toml
