[project]
name = "traffic-light-detector-prototype"
version = "0.1.0"
description = ""
authors = [
    {name = "A.Canada",email = "acavalkyrie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # numpy removed to let poetry resolve a version compatible with opencv-python
    # If your code relies on a specific numpy version, re-add an appropriate constraint
    # after running `poetry add opencv-python` and confirming compatibility.
    "matplot (>=0.1.9,<0.2.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
